# wapp

./: README.md  pyproject.toml
wapp/: __init__.py  __main__.py  argparser.py  config.py  utils.py
wapp/commands/: __init__.py  create.py  update.py
wapp/files/: pyproject.py  requirements.py  wrapper.py
