[tool.poetry]
name = "wapp"
version = "1.0.1"
description = "wrap as python package, allows to install python scripts as package"
authors = ["Tobias Pawelke <mail@tobiaspawelke.de>"]
packages = [{ include = "wapp" }]

[tool.poetry.dependencies]
python = "^3.12"
giturlparse = "^0.14.0"
tomlkit = "^0.13.2"
gitpython = "^3.1.43"
coloredlogs = "^15.0.1"
setuptools = "^80.9.0"
build = "^1.2.2.post1"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wapp = "wapp:main"
